# pokeclone

./: .gitignore  AGENTS.md  Pixel Art Toolkit Design background research.md  README.md  ToDo.md  battle_simulator.py  config.py  convert.py  create_empty_sprites.py  digest.txt  editor_ui.py  event_handler.py  index.html  main_menu.py  mkdocs.yml  monster_editor.py  move_animation_editor.py  pixle_art_editor.py  pyproject.toml  requirements-dev.txt  requirements.txt  selection_manager.py  server.py  sprite_editor.py  tasks.json  tool_manager.py
data/: monsters.json  moves.json  type_chart.json
docs/: battle-ai.md  battle-balance-pass-2026-02.md  battle-balance-testing-strategy-2026-02.md  battle-simulator.md  editor-agent-api.md  getting-started.md  index.md  main-menu.md  map-editor-design.md  map-editor.md  monster-drawing-mcp.md  move-animation-editor-design.md  move-animation-editor.md  overworld-system-design.md  overworld.md  pixel-art-editor.md  type_chart.md  world-view.md
notes/: blockers.md  decisions.md  progress.md
pokeclone.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: bootstrap_test_env.sh  build.bat  build.sh  convert_sprites.py  create_empty_sprites.py  create_test_ref_image.py  run_tests.sh
tests/: _test_pixle_art_editor.py  test_battle_ai.py  test_battle_balance_metrics.py  test_battle_engine.py  test_battle_scene.py  test_battle_simulator.py  test_battle_sound_effects.py  test_battle_team_selection.py  test_button_panel_scroll.py  test_clipboard_manager.py  test_constrained_fields.py  test_dialog_manager.py  (+35 more)
(+48 files in other folders)
